--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,20 +30,21 @@ environment:
 dependencies:
   appwrite: ^9.0.1
   cached_network_image: ^3.2.3
+  carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.3.6
   fpdart: ^0.6.0
   geocoding: ^2.1.0
+  group_button: ^5.3.0
   image_picker: ^1.0.0
   intl: ^0.18.1
   intl_phone_number_input: ^0.7.3+1
+  like_button: ^2.0.5
   location: ^4.4.0
   otp_text_field: ^1.1.3
   shimmer: ^3.0.0
-  carousel_slider: ^4.2.1
-  # geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
