--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   location: ^4.4.0
   otp_text_field: ^1.1.3
   shimmer: ^3.0.0
+  dots_indicator: ^2.1.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
