--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   otp_text_field: ^1.1.3
   shimmer: ^3.0.0
   dots_indicator: ^2.1.1
+  chat_bubbles: ^1.4.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
