--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shimmer: ^3.0.0
   dots_indicator: ^2.1.1
   chat_bubbles: ^1.4.1
+  rflutter_alert: ^2.0.7
 
 dev_dependencies:
   flutter_lints: ^2.0.0
